--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="paragraph">
             <h2>Achievements & Works</h2>
-            <p><b>Project Moderator & Software Engineer</b> (December 2022 - now): This is the position I hold, this job is in charge of reading and handling errors9C9L.ORG is a Vietnamese anarchy Minecraft server, owned by xKhoacyan.</p>
+            <p><b>Project Moderator & Software Engineer</b> (December 2022 - now): This is the position I hold, this job is in charge of reading and handling error</p>
             <p><b>Owner @Camelia </b>: This is my Discord community server, if you want you can join in to chat and learn. We are pleased to welcome you</a></p>
         </div>
         <div class="paragraph">
