--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <source src="background.mp4" type="video/mp4">
     </video>
     <div class="content">
-        <p class="phone-warning">ⓘ Phone viewing is still experimental. Some elements may not render properly.</p>
+        <p class="phone-warning">ⓘ Điện thoại xem có thể bị tràn viền và gây khó chịu. Dùng giao diện PC để có thể xem tốt hơn (Phone viewing can be blurry and cause discomfort. Use the PC interface for better viewing) </p>
         <div class="bio">
             <div class="bio-avatar">
                 <img style="border-radius: 10%;" src="./avatar.jpg" width="200" height="200">
