--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
             </div> -->
             <div class="project">
-                <img style="border-radius: 10%;" src="./avatar.jpg" width="120" height="auto">
+                <img style="border-radius: 10%;" src="https://media.discordapp.net/attachments/976349132270743614/1329833784845144064/IMG_20241208_175912.jpg?ex=678bc7b9&is=678a7639&hm=244d0ac5e5741eeeb359458a451c3da158803711698de36debe9d653ac7ba7a1&=&format=webp&width=934&height=700" width="120" height="auto">
                 <div class="project-text">
                     <p class="project-title">Developer & Software Engineer</p>
                     <p>Simply a guy who likes programming</p>
