--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p id="countdown"></p>
                 <p class="bio-social">
                     <a href="https://www.facebook.com/nguyen.nguyenvo.714/"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://discord.com/invite/camelia"><i class="fa-brands fa-discord"></i></a>
+                    <a href="https://discord.com/users/812279245661274132"><i class="fa-brands fa-discord"></i></a>
                     <a href="https://github.com/lewisbenj"><i class="fa-brands fa-github"></i></a>
                 </p>
             </div>
@@ -85,7 +85,6 @@
         <div class="paragraph">
             <h2>Achievements & Works</h2>
             <p><b>Project Moderator & Software Engineer</b> (December 2022 - now): This is the position I hold, this job is in charge of reading and handling error</p>
-            <p><b>Owner @Camelia </b>: This is my Discord community server, if you want you can join in to chat and learn. We are pleased to welcome you</a></p>
         </div>
         <div class="paragraph">
             <h2>Contact</h2>
@@ -120,20 +119,6 @@
                     <p>Top 50 best programmers in Southeast Asia 2023</a></p>
                 </div>
             </div>
-            <!-- <div class="project">
-                <img style="border-radius: 10%;" src="https://i.imgur.com/ewfI5T9.png" width="70" height="auto">
-                <div class="project-text">
-                    <p class="project-title">Hotline System</p>
-                    <p>A Minecraft Server owned by YouTuber called Việt Bựa.</p>
-                </div>
-            </div>
-            <div class="project">
-                <img style="border-radius: 10%;" src="https://cdn.discordapp.com/avatars/1198539942842880040/a_cfc7d8712f200de0e5966d575c1ecf3d.gif" width="70" height="auto">
-                <div class="project-text">
-                    <p class="project-title">Việt Bựa Archive Bot (Old v1)</p>
-                    <p>A Discord bot for Việt Bựa's Discord server. Now discontinued.</p>
-                </div>
-            </div> -->
             <div class="project">
                 <img style="border-radius: 10%;" src="https://media.discordapp.net/attachments/976349132270743614/1329833784845144064/IMG_20241208_175912.jpg?ex=678bc7b9&is=678a7639&hm=244d0ac5e5741eeeb359458a451c3da158803711698de36debe9d653ac7ba7a1&=&format=webp&width=934&height=700" width="120" height="auto">
                 <div class="project-text">
