--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p>Who is me? I'm a <span id="name"></span></p>
             <script>
                 var typed = new Typed('#name', {
-                  strings: ['Benjamin Lewis', 'Nguyễn Võ Chí Nguyện', "Trùm code Hậu Giang"],
+                  strings: ['Benjamin Lewis', 'Nguyễn Võ Chí Nguyện'],
                   typeSpeed: 96,
                   backspeed: 96,
                   cursorChar: "_",
@@ -142,7 +142,6 @@
             var typed = new Typed('#anime', {
               strings: ["Nguyễn Võ Chí Nguyện",
                         "Benjamin Lewis",
-                        "Trùm Code Hậu Giang"
                     ],
               typeSpeed: 96,
                 loop: true,
