--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p class="bio-description">Developer & Software Engineer</p>
                 <p id="countdown"></p>
                 <p class="bio-social">
-                    <a href="https://www.facebook.com/nguyen.nguyenvo.714/"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/benjaminlewis_211/"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://discord.com/users/812279245661274132"><i class="fa-brands fa-discord"></i></a>
                     <a href="https://github.com/lewisbenj"><i class="fa-brands fa-github"></i></a>
                 </p>
